vercre-issuer/src/snapshots/authorize:claims:state.snap
---
source: vercre-issuer/src/authorize.rs
assertion_line: 473
expression: state
---
subject_id: normal_user
stage:
  authorized:
    client_id: 96bfb9cb-0513-7d64-5532-bed74c48f9ab
    redirect_uri: "http://localhost:3000/callback"
    code_challenge: B6qi8EPWVTnONnO8XNSAsN7O2ejthn3pCKwZUO0HzU8
    code_challenge_method: S256
    details:
      - authorization_detail:
          type: openid_credential
          credential_configuration_id: EmployeeID_JWT
          credential_definition:
            credentialSubject:
              email: {}
              family_name: {}
              given_name: {}
        credential_configuration_id: EmployeeID_JWT
        credential_identifiers:
          - PHLEmployeeID
expires_at: "[expires_at]"
