vercre-issuer/src/snapshots/authorize:configuration_id:response.snap
---
source: vercre-issuer/src/authorize.rs
assertion_line: 424
expression: "&response"
---
code: "[code]"
state: "1234"
redirect_uri: "http://localhost:3000/callback"
