vercre-issuer/src/snapshots/authorize:format:response.snap
---
source: vercre-issuer/src/authorize.rs
assertion_line: 497
expression: "&response"
---
code: "[code]"
state: "1234"
redirect_uri: "http://localhost:3000/callback"
