vercre-issuer/src/snapshots/create_offer:pre-authorized:response.snap
---
source: vercre-issuer/src/create_offer.rs
assertion_line: 265
expression: "&response"
---
credential_offer:
  credential_issuer: "http://vercre.io"
  credential_configuration_ids:
    - EmployeeID_JWT
  grants:
    "urn:ietf:params:oauth:grant-type:pre-authorized_code":
      pre-authorized_code: "[pre-authorized_code]"
      tx_code:
        input_mode: numeric
        length: 6
        description: Please provide the one-time code received
tx_code: "[tx_code]"
