vercre-issuer/src/snapshots/create_offer:pre-authorized:state.snap
---
source: vercre-issuer/src/create_offer.rs
assertion_line: 293
expression: "&state"
---
expires_at: "[expires_at]"
subject_id: normal_user
credentials:
  PHLEmployeeID: EmployeeID_JWT
current_step:
  pre_authorized:
    authorized:
      - type: openid_credential
        credential_configuration_id: EmployeeID_JWT
        credential_identifiers:
          - PHLEmployeeID
    tx_code: "[tx_code]"
