vercre-issuer/src/snapshots/credential:identifier:response.snap
---
source: vercre-issuer/src/credential.rs
assertion_line: 617
expression: "&response"
---
credential: "[credential]"
c_nonce: "[c_nonce]"
c_nonce_expires_in: 599
